# gfxspot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  imgui.ini  notes.md
cmake/: AddCoreSpot.cmake  AddFileSpot.cmake  AddGltfSpot.cmake  AddMathSpot.cmake  conan.cmake  doxygen.cmake  shaders.cmake
include/graphics/: buffers.h  commands.h  descriptors.h  glfw.hpp  graphics.hpp  images.h  models.h  pipelines.h  png.h  renderer.hpp
include/spot/gfx/: animations.h  buffers.h  camera.h  collisions.h  commands.h  descriptors.h  device.h  glfw.h  glfw.hpp  graphics.h  graphics.hpp  gui.h  gui_resources.h  hash.h  image.h  images.h  input.h  material.h  mesh.h  model.h  models.h  node.h  pipelines.h  png.h  renderer.h  renderer.hpp  shader.h  viewport.h  vulkan.h  vulkan_utils.h
include/spot/gltf/: accessor.h  animation.h  bounds.h  buffer.h  camera.h  color.h  gltf.h  handle.h  image.h  light.h  material.h  mesh.h  node.h  sampler.h  script.h  texture.h
src/: animation.cc  animations.cc  bounds.cc  buffer.cc  buffers.cc  buffers.cpp  camera.cc  collisions.cc  color.cc  commands.cc  commands.cpp  descriptors.cc  descriptors.cpp  glfw.cc  glfw.cpp  gltf.cc  graphics.cc  graphics.cpp  gui.cc  gui_resources.cc  hash.cc  image.cc  images.cc  images.cpp  mesh.cc  model.cc  models.cc  node.cc  pipelines.cc  png.cc  png.cpp  renderer.cc  renderer.cpp  shader.cc  viewport.cc
test/: CMakeLists.txt  demo-1-pipelines.cc  demo-1.cc  demo-1.cpp  demo-10-text.cc  demo-11-animation.cc  demo-12-color-grid.cc  demo-13-cube.cc  demo-14-cubes.cc  demo-15-imgui.cc  demo-2-bugart.cc  demo-2.cc  demo-2.cpp  demo-3-transform.cc  demo-3.cc  demo-3.cpp  demo-4-gltf.cc  demo-4.cc  demo-4.cpp  demo-5-xyz.cc  demo-5.cc  demo-5.cpp  demo-6-rect.cc  demo-6.cc  demo-7-sol.cc  demo-7.cc  demo-8-tetris.cc  demo-8.cc  demo-9-chess-board.cc  demo-9.cc  main.cpp  text.cc
test/shader/: CMakeLists.txt  imgui.frag  imgui.vert  mesh-light.vert  mesh-no-image-light.frag  mesh-no-image-light.vert  mesh-no-image.frag  mesh-no-image.vert  mesh.frag  mesh.vert  quad.frag  quad.vert
