function( add_demo NUM )
	set( DEMO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/demo-${NUM}.cc )
	add_executable( ${PROJECT_NAME}-demo-${NUM} ${DEMO_SOURCES} )
	target_link_libraries( ${PROJECT_NAME}-demo-${NUM} ${PROJECT_NAME} )
	target_compile_features( ${PROJECT_NAME}-demo-${NUM} PUBLIC cxx_std_17 )
endfunction()

add_demo( 1 )
add_demo( 2 )
add_demo( 3 )
add_demo( 4 )
add_demo( 5 )
add_demo( 6 )
add_demo( 7 )
add_demo( 8 )
add_demo( 9 )

add_subdirectory( shader )
