function( add_demo NAME )
	set( DEMO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cc )
	add_executable( ${NAME} ${DEMO_SOURCES} )
	target_link_libraries( ${NAME} ${PROJECT_NAME} )
	target_compile_features( ${NAME} PUBLIC cxx_std_17 )
endfunction()

add_demo( demo-1 )
add_demo( demo-2 )
add_demo( demo-3 )
add_demo( demo-4 )
add_demo( demo-5 )
add_demo( demo-6-rect )
add_demo( demo-7 )
add_demo( demo-8 )
add_demo( demo-9 )
add_demo( demo-10-text )
add_demo( demo-11-animation )

add_subdirectory( shader )
