function( add_demo NAME )
	set( DEMO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cc )
	add_executable( ${NAME} ${DEMO_SOURCES} )
	target_link_libraries( ${NAME} ${PROJECT_NAME} )
	target_compile_features( ${NAME} PUBLIC cxx_std_17 )
endfunction()

add_demo( demo-1-pipelines )
add_demo( demo-2-bugart )
add_demo( demo-3-transform )
add_demo( demo-4-gltf )
add_demo( demo-5-xyz )
add_demo( demo-6-rect )
add_demo( demo-7-sol )
add_demo( demo-8-tetris )
add_demo( demo-9-chess-board )
add_demo( demo-10-text )
add_demo( demo-11-animation )
add_demo( demo-12-color-grid )

add_subdirectory( shader )
